# pca-breast-tumor

./: README.md  pca.ipynb  pyproject.toml
